Inport transactions from csv file

--- a/src/AAS/AAS.ExternalService.Aliorbank/AAS.ExternalService.Aliorbank.csproj
+++ b/src/AAS/AAS.ExternalService.Aliorbank/AAS.ExternalService.Aliorbank.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{441CB827-9954-43DE-9673-1F7D730EA6B7}</ProjectGuid>
+    <ProjectGuid>{CC2C5BFC-E81B-48B0-9832-A945BF264CFB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AAS.Core</RootNamespace>
-    <AssemblyName>AAS.Core</AssemblyName>
+    <RootNamespace>AAS.ExternalService.Aliorbank</RootNamespace>
+    <AssemblyName>AAS.ExternalService.Aliorbank</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper, Version=6.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
+      <HintPath>..\packages\CsvHelper.6.1.0\lib\net45\CsvHelper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,7 +44,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CSVImport\AliorBankService.cs" />
+    <Compile Include="CSVImport\Model\AliorBankCSVTransaction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AAS.Core.Contracts\AAS.Core.Contracts.csproj">
+      <Project>{F2AF27FB-1D5A-40C7-8805-79838A774E07}</Project>
+      <Name>AAS.Core.Contracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
