--- a/src/AAS/AAS.Core.Contracts/AAS.Core.Contracts.csproj
+++ b/src/AAS/AAS.Core.Contracts/AAS.Core.Contracts.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{441CB827-9954-43DE-9673-1F7D730EA6B7}</ProjectGuid>
+    <ProjectGuid>{F2AF27FB-1D5A-40C7-8805-79838A774E07}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AAS.Core</RootNamespace>
-    <AssemblyName>AAS.Core</AssemblyName>
+    <RootNamespace>AAS.Core.Contracts</RootNamespace>
+    <AssemblyName>AAS.Core.Contracts</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model.cs" />
+    <Compile Include="IBankService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
