Code next noname

--- a/src/AAS/AAS.Console/AAS.Console.csproj
+++ b/src/AAS/AAS.Console/AAS.Console.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F2AF27FB-1D5A-40C7-8805-79838A774E07}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{8331FB18-8B4A-49A2-9EFC-C8217D3250C2}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AAS.Core.Contracts</RootNamespace>
-    <AssemblyName>AAS.Core.Contracts</AssemblyName>
+    <RootNamespace>AAS.Console</RootNamespace>
+    <AssemblyName>AAS.Console</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,18 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentNHibernate, Version=2.0.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentNHibernate.2.0.3.0\lib\net40\FluentNHibernate.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Iesi.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\packages\Iesi.Collections.4.0.0.4000\lib\net40\Iesi.Collections.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="NHibernate, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\packages\NHibernate.4.0.0.4000\lib\net40\NHibernate.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -52,22 +43,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\BankAccount.cs" />
-    <Compile Include="Model\BankTransaction.cs" />
-    <Compile Include="IBankService.cs" />
-    <Compile Include="Model\Vo\Money.cs" />
-    <Compile Include="Model\Dictionaries\TransactionBucketType.cs" />
-    <Compile Include="Model\Vo\TransactionInfo.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AAS.Common\AAS.Common.csproj">
+      <Project>{818A4DF6-D1E3-4310-AA59-4DBFA8C54976}</Project>
+      <Name>AAS.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AAS.Core\AAS.Core.csproj">
+      <Project>{441CB827-9954-43DE-9673-1F7D730EA6B7}</Project>
+      <Name>AAS.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AAS.Persistance\AAS.Persistance.csproj">
       <Project>{87B12E09-509F-40D4-A052-5E41D48616E0}</Project>
       <Name>AAS.Persistance</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
