--- a/src/AAS/AAS.ExternalService.Aliorbank/AAS.ExternalService.Aliorbank.csproj
+++ b/src/AAS/AAS.ExternalService.Aliorbank/AAS.ExternalService.Aliorbank.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CSVImport\AliorBankService.cs" />
     <Compile Include="CSVImport\Model\AliorBankCSVTransaction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecipentEqualityComparer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -55,6 +56,10 @@
     <ProjectReference Include="..\AAS.Core.Contracts\AAS.Core.Contracts.csproj">
       <Project>{F2AF27FB-1D5A-40C7-8805-79838A774E07}</Project>
       <Name>AAS.Core.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AAS.Persistance\AAS.Persistance.csproj">
+      <Project>{87b12e09-509f-40d4-a052-5e41d48616e0}</Project>
+      <Name>AAS.Persistance</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
